<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where is My Money App</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_group_profile">GroupProfile</string>
    <string name="creatorName">Creator</string>
    <string name="groupName">Group</string>
    <string name="memberNames">Members</string>
    <string name="userName">UserName</string>
    <string name="title_activity_per_person_log">Person to Person</string>

    <integer-array name="userNumber"></integer-array>

    <string name="autologin">Automatically log me in</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="calendar">Calendar</string>
    <string name="transactions">Transactions</string>
    <string name="convos">Messages</string>
    <string name="wishList">Wish List</string>
    <string name="settings">Settings</string>

    <integer-array name="amount"></integer-array>

    <string name="amount">Amount</string>
    <string name="debug">Debug</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="repassword">Re-enter password</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_wish_list">WishList</string>
    <string name="title_activity_settings">Settings</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="name">Firstname Lastname</string>
    <string name="date">jj/mm/yyyy</string>
    <string name="time">hh:mm</string>
    <string name="register">Register</string>
    <string name="checkNewView">Check New View?</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_per_person_log_profile">PerPersonLogProfile</string>
    <string name="title_activity_log_page_fragment">LogPageFragment</string>
    <string name="profile">Profile</string>
    <string name="log">Log</string>
    <string name="empty"></string>
    <string name="title_person_list">People</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="next"></string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="transaction_log">Transaction Log</string>
    <string name="title_activity_per_item">PerItem</string>
    <string name="new_transaction">New Transaction</string>
    <string name="title_activity_new_transaction">NewTransaction</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_large">MainActivity</string>
    <string name="title_activity_main_menu_large">MainMenuLarge</string>
    <string name="title_activity_new_person">NewPerson</string>
    <string name="person_search_hint">Search Person</string>
    <string name="example_phone_no">0123456789</string>
    <string name="example_password">password</string>
    <string name="preference_file_key">Preference</string>
    <string name="view_mode">1</string>
    <string name="who_owe">Who owes you?</string>
    <string name="Friends">Friends</string>
    <string name="title_activity_friend">Friends</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="reject">Decline</string>    
    <string name="pay">Pay</string>    
    <string name="title_activity_per_item_details">PerItemDetails</string>
    <string name="perItem">Per Item</string>
    <string name="perPerson">Per Person</string>
    <string name="transactionType">How would you like your transactions to show?</string>
    <string name="messageString">Enter you message here</string>
    <string name="pref_view_mode_summ">The way you would like to view how you owe money</string>
    
    

</resources>