<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <CheckedTextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignRight="@+id/passw"
        android:text="@string/phone" />

    <CheckBox
        android:id="@+id/autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/autologin" />

    <CheckedTextView
        android:id="@+id/passw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autologin"
        android:layout_centerVertical="true"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passw"
        android:layout_alignRight="@+id/errorView"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/example_password" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/phone"
        android:layout_alignLeft="@+id/password"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/example_phone_no" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/errorView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:onClick="loginHandler"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/login" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/errorView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/signin_custom_button"
        android:layout_marginTop="27dp"
        android:text="@string/signUp"
        android:onClick="signUpHandler" />

</RelativeLayout>