<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignIn" >

    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/enterNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterName"
        android:layout_below="@+id/enterName"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"
        android:textColor="@color/grey" />
    
    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterNumber"
        android:layout_below="@+id/enterNumber"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPassword" 
        android:text="@string/password"
        android:textColor="@color/grey"/>

    <EditText
        android:id="@+id/checkPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/enterTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterDate"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="time"
        android:text="@string/time"
        android:textColor="@color/grey" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/enterDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkPassword"
        android:layout_below="@+id/checkPassword"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/date"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterTime"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:layout_marginTop="50dp"
        android:text="@string/register" />

</RelativeLayout>
