<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUp" >

    <Button
        android:onClick="signupHandler"
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:background="@drawable/custom_button"
        android:text="@string/register" />

    
    <EditText
        android:id="@+id/enterSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/surname"
        android:textColor="@color/grey" />
    
    <EditText
        android:id="@+id/enterFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkPassword"
        android:layout_alignRight="@+id/enterSurname"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/checkPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpButton"
        android:layout_alignLeft="@+id/enterPassword"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/grey" >

        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/enterNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterPassword"
        android:layout_alignLeft="@+id/enterPassword"
        android:layout_marginBottom="42dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:hint="@string/PhoneNumber"
        android:textColor="@color/grey" />

    <TextView
        android:id="@id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterPassword"
        android:layout_alignParentLeft="true" />

</RelativeLayout>