<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainMenu" >

        <Button
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/transactions"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_button"
            android:onClick="toCalendar"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/calendar"
            android:textSize="25sp" />

        <Button
            android:id="@+id/transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/convos"
            android:layout_alignLeft="@+id/calendar"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_button"
            android:onClick="toTransactions"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/transactions"
            android:textSize="25sp" />

        <Button
            android:id="@+id/convos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/wishList"
            android:layout_alignLeft="@+id/transactions"
            android:layout_centerVertical="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_button"
            android:onClick="toMessages"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/convos"
            android:textSize="25sp" />

        <Button
            android:id="@+id/wishList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/settings"
            android:layout_alignLeft="@+id/convos"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_button"
            android:onClick="toWishList"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/wishList"
            android:textSize="25sp" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wishList"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="23dp"
            android:background="@drawable/custom_button"
            android:onClick="toSettings"
            android:shadowColor="@android:color/background_dark"
            android:text="@string/settings"
            android:textSize="25sp" />
    </LinearLayout>

</ScrollView>